<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/progress_top_margin"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_inputLayoutEmail"
            android:layout_width="@dimen/login_edittext_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_email_bottom_margin"
            android:backgroundTint="@android:color/white"
            android:hint="@string/login_email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_editMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:inputType="textWebEmailAddress"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/login_edittext_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_password_bottom_margin"
            android:backgroundTint="@android:color/white"
            android:hint="@string/login_password_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_button_color"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white" />
    </LinearLayout>


</FrameLayout>