<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232F34"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ProgressBar
        android:id="@+id/edit_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/progress_top_margin"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_inputLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/edit_id_button_margin"
            android:layout_marginLeft="@dimen/edit_id_left_width"
            android:layout_marginRight="@dimen/edit_id_right_width"
            android:backgroundTint="@android:color/white"
            android:hint="@string/edit_id_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_editId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/edit_name_button_margin"
            android:layout_marginLeft="@dimen/edit_name_left_width"
            android:layout_marginRight="@dimen/edit_name_right_width"
            android:backgroundTint="@android:color/white"
            android:hint="@string/edit_name_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_inputLayoutSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/edit_surname_button_margin"
            android:layout_marginLeft="@dimen/edit_surname_left_width"
            android:layout_marginRight="@dimen/edit_surname_right_width"
            android:backgroundTint="@android:color/white"
            android:hint="@string/edit_surname_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_editSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_inputLayoutTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/edit_telephone_button_margin"
            android:layout_marginLeft="@dimen/edit_telephone_left_width"
            android:layout_marginRight="@dimen/edit_telephone_right_width"
            android:backgroundTint="@android:color/white"
            android:hint="@string/edit_telephone_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_editTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/white"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="STATUS" />

        <Spinner
            android:backgroundTint="@android:color/white"
            android:id="@+id/edit_statusSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>


</LinearLayout>